src/oberon/OberonParser.java
// $ANTLR 3.5.1 /home/user/workspace/OberonParser/src/oberon/Oberon.g 2014-05-31 21:44:38
 package oberon; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class OberonParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARACTER", "DIGIT", "IDENTIFIER", 
		"INTEGER", "LETTER", "OTHER", "REAL", "SCALEFACTOR", "WS", "'\"'", "'#'", 
		"'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'/'", 
		"':'", "':='", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'ARRAY'", 
		"'BEGIN'", "'CASE'", "'CONST'", "'DIV'", "'DO'", "'ELSE'", "'ELSIF'", 
		"'END'", "'EXIT'", "'IF'", "'IMPORT'", "'IN'", "'IS'", "'LOOP'", "'MOD'", 
		"'MODULE'", "'NIL'", "'OF'", "'OR'", "'POINTER'", "'PROCEDURE'", "'RECORD'", 
		"'REPEAT'", "'RETURN'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
		"'WHILE'", "'WITH'", "'X'", "'['", "'\\.\\.'", "']'", "'^'", "'{'", "'|'", 
		"'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int CHARACTER=4;
	public static final int DIGIT=5;
	public static final int IDENTIFIER=6;
	public static final int INTEGER=7;
	public static final int LETTER=8;
	public static final int OTHER=9;
	public static final int REAL=10;
	public static final int SCALEFACTOR=11;
	public static final int WS=12;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public OberonParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public OberonParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return OberonParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/user/workspace/OberonParser/src/oberon/Oberon.g"; }


	public static class module_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "module"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:1: module : 'MODULE' IDENTIFIER ';' ( importlist )? declarationsequence ( 'BEGIN' statementsequence )? 'END' IDENTIFIER '.' EOF ;
	public final OberonParser.module_return module() throws RecognitionException {
		OberonParser.module_return retval = new OberonParser.module_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token IDENTIFIER2=null;
		Token char_literal3=null;
		Token string_literal6=null;
		Token string_literal8=null;
		Token IDENTIFIER9=null;
		Token char_literal10=null;
		Token EOF11=null;
		ParserRuleReturnScope importlist4 =null;
		ParserRuleReturnScope declarationsequence5 =null;
		ParserRuleReturnScope statementsequence7 =null;

		Object string_literal1_tree=null;
		Object IDENTIFIER2_tree=null;
		Object char_literal3_tree=null;
		Object string_literal6_tree=null;
		Object string_literal8_tree=null;
		Object IDENTIFIER9_tree=null;
		Object char_literal10_tree=null;
		Object EOF11_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:7: ( 'MODULE' IDENTIFIER ';' ( importlist )? declarationsequence ( 'BEGIN' statementsequence )? 'END' IDENTIFIER '.' EOF )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:9: 'MODULE' IDENTIFIER ';' ( importlist )? declarationsequence ( 'BEGIN' statementsequence )? 'END' IDENTIFIER '.' EOF
			{
			root_0 = (Object)adaptor.nil();


			string_literal1=(Token)match(input,49,FOLLOW_49_in_module139); 
			string_literal1_tree = (Object)adaptor.create(string_literal1);
			adaptor.addChild(root_0, string_literal1_tree);

			IDENTIFIER2=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module141); 
			IDENTIFIER2_tree = (Object)adaptor.create(IDENTIFIER2);
			adaptor.addChild(root_0, IDENTIFIER2_tree);

			char_literal3=(Token)match(input,27,FOLLOW_27_in_module143); 
			char_literal3_tree = (Object)adaptor.create(char_literal3);
			adaptor.addChild(root_0, char_literal3_tree);

			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:33: ( importlist )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==44) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:33: importlist
					{
					pushFollow(FOLLOW_importlist_in_module145);
					importlist4=importlist();
					state._fsp--;

					adaptor.addChild(root_0, importlist4.getTree());

					}
					break;

			}

			pushFollow(FOLLOW_declarationsequence_in_module148);
			declarationsequence5=declarationsequence();
			state._fsp--;

			adaptor.addChild(root_0, declarationsequence5.getTree());

			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:65: ( 'BEGIN' statementsequence )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==34) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:19:66: 'BEGIN' statementsequence
					{
					string_literal6=(Token)match(input,34,FOLLOW_34_in_module151); 
					string_literal6_tree = (Object)adaptor.create(string_literal6);
					adaptor.addChild(root_0, string_literal6_tree);

					pushFollow(FOLLOW_statementsequence_in_module153);
					statementsequence7=statementsequence();
					state._fsp--;

					adaptor.addChild(root_0, statementsequence7.getTree());

					}
					break;

			}

			string_literal8=(Token)match(input,41,FOLLOW_41_in_module157); 
			string_literal8_tree = (Object)adaptor.create(string_literal8);
			adaptor.addChild(root_0, string_literal8_tree);

			IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module159); 
			IDENTIFIER9_tree = (Object)adaptor.create(IDENTIFIER9);
			adaptor.addChild(root_0, IDENTIFIER9_tree);

			char_literal10=(Token)match(input,22,FOLLOW_22_in_module161); 
			char_literal10_tree = (Object)adaptor.create(char_literal10);
			adaptor.addChild(root_0, char_literal10_tree);

			EOF11=(Token)match(input,EOF,FOLLOW_EOF_in_module163); 
			EOF11_tree = (Object)adaptor.create(EOF11);
			adaptor.addChild(root_0, EOF11_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "module"


	public static class importlist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "importlist"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:22:1: importlist : 'IMPORT' importo ( ',' importo )* ';' ;
	public final OberonParser.importlist_return importlist() throws RecognitionException {
		OberonParser.importlist_return retval = new OberonParser.importlist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal12=null;
		Token char_literal14=null;
		Token char_literal16=null;
		ParserRuleReturnScope importo13 =null;
		ParserRuleReturnScope importo15 =null;

		Object string_literal12_tree=null;
		Object char_literal14_tree=null;
		Object char_literal16_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:22:11: ( 'IMPORT' importo ( ',' importo )* ';' )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:22:13: 'IMPORT' importo ( ',' importo )* ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal12=(Token)match(input,44,FOLLOW_44_in_importlist183); 
			string_literal12_tree = (Object)adaptor.create(string_literal12);
			adaptor.addChild(root_0, string_literal12_tree);

			pushFollow(FOLLOW_importo_in_importlist185);
			importo13=importo();
			state._fsp--;

			adaptor.addChild(root_0, importo13.getTree());

			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:22:30: ( ',' importo )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==20) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:22:31: ',' importo
					{
					char_literal14=(Token)match(input,20,FOLLOW_20_in_importlist188); 
					char_literal14_tree = (Object)adaptor.create(char_literal14);
					adaptor.addChild(root_0, char_literal14_tree);

					pushFollow(FOLLOW_importo_in_importlist190);
					importo15=importo();
					state._fsp--;

					adaptor.addChild(root_0, importo15.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			char_literal16=(Token)match(input,27,FOLLOW_27_in_importlist194); 
			char_literal16_tree = (Object)adaptor.create(char_literal16);
			adaptor.addChild(root_0, char_literal16_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "importlist"


	public static class importo_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "importo"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:23:1: importo : IDENTIFIER ( ':=' IDENTIFIER )? ;
	public final OberonParser.importo_return importo() throws RecognitionException {
		OberonParser.importo_return retval = new OberonParser.importo_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENTIFIER17=null;
		Token string_literal18=null;
		Token IDENTIFIER19=null;

		Object IDENTIFIER17_tree=null;
		Object string_literal18_tree=null;
		Object IDENTIFIER19_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:23:8: ( IDENTIFIER ( ':=' IDENTIFIER )? )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:23:10: IDENTIFIER ( ':=' IDENTIFIER )?
			{
			root_0 = (Object)adaptor.nil();


			IDENTIFIER17=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importo200); 
			IDENTIFIER17_tree = (Object)adaptor.create(IDENTIFIER17);
			adaptor.addChild(root_0, IDENTIFIER17_tree);

			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:23:21: ( ':=' IDENTIFIER )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==26) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:23:22: ':=' IDENTIFIER
					{
					string_literal18=(Token)match(input,26,FOLLOW_26_in_importo203); 
					string_literal18_tree = (Object)adaptor.create(string_literal18);
					adaptor.addChild(root_0, string_literal18_tree);

					IDENTIFIER19=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importo205); 
					IDENTIFIER19_tree = (Object)adaptor.create(IDENTIFIER19);
					adaptor.addChild(root_0, IDENTIFIER19_tree);

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "importo"


	public static class declarationsequence_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declarationsequence"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:1: declarationsequence : ( 'CONST' ( constantdeclaration ';' )* | 'TYPE' ( typedeclaration ';' )* | 'VAR' ( variabledeclaration ';' )* )* ;
	public final OberonParser.declarationsequence_return declarationsequence() throws RecognitionException {
		OberonParser.declarationsequence_return retval = new OberonParser.declarationsequence_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal20=null;
		Token char_literal22=null;
		Token string_literal23=null;
		Token char_literal25=null;
		Token string_literal26=null;
		Token char_literal28=null;
		ParserRuleReturnScope constantdeclaration21 =null;
		ParserRuleReturnScope typedeclaration24 =null;
		ParserRuleReturnScope variabledeclaration27 =null;

		Object string_literal20_tree=null;
		Object char_literal22_tree=null;
		Object string_literal23_tree=null;
		Object char_literal25_tree=null;
		Object string_literal26_tree=null;
		Object char_literal28_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:20: ( ( 'CONST' ( constantdeclaration ';' )* | 'TYPE' ( typedeclaration ';' )* | 'VAR' ( variabledeclaration ';' )* )* )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:22: ( 'CONST' ( constantdeclaration ';' )* | 'TYPE' ( typedeclaration ';' )* | 'VAR' ( variabledeclaration ';' )* )*
			{
			root_0 = (Object)adaptor.nil();


			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:22: ( 'CONST' ( constantdeclaration ';' )* | 'TYPE' ( typedeclaration ';' )* | 'VAR' ( variabledeclaration ';' )* )*
			loop8:
			while (true) {
				int alt8=4;
				switch ( input.LA(1) ) {
				case 36:
					{
					alt8=1;
					}
					break;
				case 60:
					{
					alt8=2;
					}
					break;
				case 62:
					{
					alt8=3;
					}
					break;
				}
				switch (alt8) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:24: 'CONST' ( constantdeclaration ';' )*
					{
					string_literal20=(Token)match(input,36,FOLLOW_36_in_declarationsequence217); 
					string_literal20_tree = (Object)adaptor.create(string_literal20);
					adaptor.addChild(root_0, string_literal20_tree);

					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:32: ( constantdeclaration ';' )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==IDENTIFIER) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:33: constantdeclaration ';'
							{
							pushFollow(FOLLOW_constantdeclaration_in_declarationsequence220);
							constantdeclaration21=constantdeclaration();
							state._fsp--;

							adaptor.addChild(root_0, constantdeclaration21.getTree());

							char_literal22=(Token)match(input,27,FOLLOW_27_in_declarationsequence222); 
							char_literal22_tree = (Object)adaptor.create(char_literal22);
							adaptor.addChild(root_0, char_literal22_tree);

							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;
				case 2 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:61: 'TYPE' ( typedeclaration ';' )*
					{
					string_literal23=(Token)match(input,60,FOLLOW_60_in_declarationsequence228); 
					string_literal23_tree = (Object)adaptor.create(string_literal23);
					adaptor.addChild(root_0, string_literal23_tree);

					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:68: ( typedeclaration ';' )*
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==IDENTIFIER) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:69: typedeclaration ';'
							{
							pushFollow(FOLLOW_typedeclaration_in_declarationsequence231);
							typedeclaration24=typedeclaration();
							state._fsp--;

							adaptor.addChild(root_0, typedeclaration24.getTree());

							char_literal25=(Token)match(input,27,FOLLOW_27_in_declarationsequence233); 
							char_literal25_tree = (Object)adaptor.create(char_literal25);
							adaptor.addChild(root_0, char_literal25_tree);

							}
							break;

						default :
							break loop6;
						}
					}

					}
					break;
				case 3 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:93: 'VAR' ( variabledeclaration ';' )*
					{
					string_literal26=(Token)match(input,62,FOLLOW_62_in_declarationsequence239); 
					string_literal26_tree = (Object)adaptor.create(string_literal26);
					adaptor.addChild(root_0, string_literal26_tree);

					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:99: ( variabledeclaration ';' )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==IDENTIFIER) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// /home/user/workspace/OberonParser/src/oberon/Oberon.g:26:100: variabledeclaration ';'
							{
							pushFollow(FOLLOW_variabledeclaration_in_declarationsequence242);
							variabledeclaration27=variabledeclaration();
							state._fsp--;

							adaptor.addChild(root_0, variabledeclaration27.getTree());

							char_literal28=(Token)match(input,27,FOLLOW_27_in_declarationsequence244); 
							char_literal28_tree = (Object)adaptor.create(char_literal28);
							adaptor.addChild(root_0, char_literal28_tree);

							}
							break;

						default :
							break loop7;
						}
					}

					}
					break;

				default :
					break loop8;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declarationsequence"


	public static class constantdeclaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "constantdeclaration"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:28:1: constantdeclaration : identifierdefinition '=' constantexpression ;
	public final OberonParser.constantdeclaration_return constantdeclaration() throws RecognitionException {
		OberonParser.constantdeclaration_return retval = new OberonParser.constantdeclaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal30=null;
		ParserRuleReturnScope identifierdefinition29 =null;
		ParserRuleReturnScope constantexpression31 =null;

		Object char_literal30_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:28:20: ( identifierdefinition '=' constantexpression )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:28:22: identifierdefinition '=' constantexpression
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_identifierdefinition_in_constantdeclaration257);
			identifierdefinition29=identifierdefinition();
			state._fsp--;

			adaptor.addChild(root_0, identifierdefinition29.getTree());

			char_literal30=(Token)match(input,30,FOLLOW_30_in_constantdeclaration259); 
			char_literal30_tree = (Object)adaptor.create(char_literal30);
			adaptor.addChild(root_0, char_literal30_tree);

			pushFollow(FOLLOW_constantexpression_in_constantdeclaration261);
			constantexpression31=constantexpression();
			state._fsp--;

			adaptor.addChild(root_0, constantexpression31.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constantdeclaration"


	public static class identifierdefinition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "identifierdefinition"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:29:1: identifierdefinition : IDENTIFIER ( '*' )? ;
	public final OberonParser.identifierdefinition_return identifierdefinition() throws RecognitionException {
		OberonParser.identifierdefinition_return retval = new OberonParser.identifierdefinition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENTIFIER32=null;
		Token char_literal33=null;

		Object IDENTIFIER32_tree=null;
		Object char_literal33_tree=null;

		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:29:21: ( IDENTIFIER ( '*' )? )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:29:23: IDENTIFIER ( '*' )?
			{
			root_0 = (Object)adaptor.nil();


			IDENTIFIER32=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifierdefinition267); 
			IDENTIFIER32_tree = (Object)adaptor.create(IDENTIFIER32);
			adaptor.addChild(root_0, IDENTIFIER32_tree);

			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:29:34: ( '*' )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==18) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// /home/user/workspace/OberonParser/src/oberon/Oberon.g:29:34: '*'
					{
					char_literal33=(Token)match(input,18,FOLLOW_18_in_identifierdefinition269); 
					char_literal33_tree = (Object)adaptor.create(char_literal33);
					adaptor.addChild(root_0, char_literal33_tree);

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identifierdefinition"


	public static class constantexpression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "constantexpression"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:31:1: constantexpression : expression ;
	public final OberonParser.constantexpression_return constantexpression() throws RecognitionException {
		OberonParser.constantexpression_return retval = new OberonParser.constantexpression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope expression34 =null;


		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:31:19: ( expression )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:31:21: expression
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expression_in_constantexpression277);
			expression34=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression34.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constantexpression"


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// /home/user/workspace/OberonParser/src/oberon/Oberon.g:32:1: expression : simpleexpression ( relation simpleexpression )? ;
	public final OberonParser.expression_return expression() throws RecognitionException {
		OberonParser.expression_return retval = new OberonParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope simpleexpression35 =null;
		ParserRuleReturnScope relation36 =null;
		ParserRuleReturnScope simpleexpression37 =null;


		try {
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:32:11: ( simpleexpression ( relation simpleexpression )? )
			// /home/user/workspace/OberonParser/src/oberon/Oberon.g:32:13: simpleexpression ( relation simpleexpression )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_simpleexpression_in_expression283);
			simpleexpression35=simpleexpression();
			state._fsp--;

			adaptor.addChild(root_0, simpleexpression35.getTree());
